layout bugfix

--- a/app_manager/resources/styles.css
+++ b/app_manager/resources/styles.css
@@ -73,6 +73,7 @@
   border: 1px solid lightgrey;
   box-shadow: rgba(0, 0, 0, 0.05) 0 1px 1px;
   width: 100%;
+  background-color: white;
 }
 
 #back {
